--- a/css/style.css
+++ b/css/style.css
@@ -158,4 +158,70 @@ input {
   padding: 18px 35px;
   border: 0;
   border-radius: 50px;
+}
+
+.logo-sect .logo-block {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 99px;
+}
+.logo-sect-row {
+  display: flex;
+  margin-top: 100px;
+  position: relative;
+}
+.logo-sect-row .col-1 {
+  flex: 50%;
+  min-width: 849px;
+  margin-left: -165px;
+}
+.logo-sect-row .col-1 .flex-block-img {
+  display: flex;
+}
+.logo-sect-row .col-1 .flex-block-img img {
+  display: block;
+  margin-right: 32px;
+}
+.logo-sect-row .col-2 {
+  flex: 50%;
+  padding-left: 93px;
+}
+.logo-sect-row .col-2-text-block .heading {
+  margin-top: 68px;
+  font-size: 40px;
+}
+.logo-sect-row .col-2-text-block .text {
+  margin-top: 20px;
+}
+.logo-sect-row .col-2 .btn {
+  margin-top: 40px;
+}
+.logo-sect-row .small-block {
+  position: absolute;
+  background-color: white;
+  min-width: 350px;
+  height: 141px;
+  border-radius: 10px;
+  left: 274px;
+  top: 332px;
+  color: #323232;
+}
+.logo-sect-row .small-block img {
+  display: block;
+  position: absolute;
+  top: 48px;
+  left: 29px;
+}
+.logo-sect-row .small-block .heading {
+  position: absolute;
+  top: 32px;
+  left: 94px;
+  font-weight: bold;
+}
+.logo-sect-row .small-block .text {
+  position: absolute;
+  top: 58px;
+  left: 94px;
+  font-size: 16px;
 }/*# sourceMappingURL=style.css.map */
