--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,10 +10,17 @@ body {
 .container {
     max-width: 1110px;
     margin: 0 auto;
+    @media (max-width: 1200px){
+        max-width: 90%;
+    }
 }
 
 input {
     outline: none;
+}
+
+a {
+    text-decoration: none;
 }
 
 .navbar {
@@ -21,6 +28,9 @@ input {
     align-items: center;
     justify-content: space-between;
     margin: 40px auto;
+    @media (max-width: 992px){
+        flex-direction: column;
+    }
 }
 
 .navbar-list {
@@ -28,8 +38,16 @@ input {
     list-style: none;
     padding: 0;
     margin: 0;
+    @media (max-width: 768px){
+        flex-direction: column;
+        text-align: center;
+        gap: 7px;
+    }
     &-item {
         margin-left: 42px;
+        @media (max-width: 992px){
+            max-width: 0 20px;
+        }
         a {
             color: $darkgrey ;
             text-decoration: none;
@@ -46,6 +64,9 @@ input {
 .main-heading {
     color: $darkgrey;
     font-size: 54px;
+    @media (max-width: 768px){
+        font-size: 30px;
+    }
 }
 
 .intro-sect {
@@ -53,10 +74,16 @@ input {
         width: 680px;
         position: relative;
         margin-bottom: 30px;
+        @media (max-width: 768px){
+            width: auto;
+        }
     }
     .intro-row {
         display: flex;
         align-items: center;
+        @media (max-width: 576px){
+            flex-direction: column-reverse;
+        }
     }
     .col-1 {
         max-width: 52%;
@@ -64,11 +91,21 @@ input {
     .col-2 {
         max-width: 48%;
     }
+
+    @media (max-width: 576px){
+        .col-1, .col-2{
+            max-width: 100%;
+        }
+    }
+
     .intro-form {
         overflow: hidden;
         width: 460px;
         position: relative;
         margin-top: 40px;
+        @media (max-width: 576px){
+            width: 100%;
+        }
         &-input {
             border:0;
             box-shadow: 0px 17px 42px rgba(0, 0, 0, 0.12);
@@ -78,6 +115,10 @@ input {
 
             &::placeholder {
                 color: #BBBBBB;
+            }
+
+            @media (max-width: 480px){
+                padding-left: 30px;
             }
         }
 
@@ -94,12 +135,21 @@ input {
             left: 28px;
             top:50%;
             transform: translateY(-50%);
+
+            @media (max-width: 480px){
+                display: none;
+            }
         }
 
         .btn {
             position: absolute;
             right: 0;
             height: 100%;
+        }
+    }
+    .intro-img {
+        @media (max-width: 1200px){
+            max-width: 40vw;
         }
     }
 }
@@ -120,30 +170,46 @@ input {
         align-items: center;
         justify-content: space-between;
         margin-top: 99px;
+        img {
+            width: 20%;
+        }
     }
     &-row {
         display: flex;
         margin-top: 100px;
         position: relative;
+        @media (max-width: 992px){
+            flex-direction: column;
+        }
         .col-1 {
-            flex: 50%;
-            min-width: 849px;
-            margin-left:-165px;
+            width: 50%;
             .flex-block-img {
                 display: flex;
+                transform: translateX(-165px);
                 img {
                     display: block;
                     margin-right: 32px;
+                    @media (max-width: 1200px){
+                        max-width: 40vw;
+                    }
+                    @media (max-width: 992px){
+                        transform: translateX(110px);
+                    }
                 }
             }
+            
         }
         .col-2 {
-            flex: 50%;
-            padding-left: 93px;
+            max-width: 50%;
+            padding-left: 180px;
+
             &-text-block {
                 .heading {
                     margin-top: 68px;
                     font-size: 40px;
+                    @media (max-width: 768px){
+                        font-size: 30px;
+                    }
                 }
                 .text {
                     margin-top: 20px;
@@ -152,7 +218,29 @@ input {
             .btn {
                 margin-top: 40px;
             }
+            @media (max-width: 992px){
+                padding: 0 80px;
+                }
+
+            @media (max-width: 768px){
+                padding: 0 70px;
+            }
+
+            @media (max-width: 576px){
+                padding: 0 60px;
+            }
+
+            @media (max-width: 480px){
+                padding: 0 50px;
+            }
         }
+
+        @media (max-width: 992px){
+            .col-1, .col-2 {
+                max-width: 100%;
+            }
+        }
+
         .small-block {
             position: absolute;
             background-color: white;
@@ -162,28 +250,219 @@ input {
             left: 274px;
             top: 332px;
             color: $darkgrey;
+
+            @media (max-width: 992px){
+                left: 385px;
+                top: 355px;
+                height: 110px;
+            }
+
+            @media (max-width: 768px){
+                left: 350px;
+                top: 355px;
+                height: 110px;
+            }
+            @media (max-width: 576px){
+                min-width: 292px;
+                height: 90px;
+                left: 235px;
+                top: 257px;
+            }
+
             img {
                 display: block;
                 position: absolute;
                 top:48px;
                 left:29px;
+                @media (max-width: 576px){
+                    top: 24px;
+                    left:15px;
+                }
             }
+            
             .heading {
                 position: absolute;
                 top:32px;
                 left:94px;
                 font-weight: bold;
+                @media (max-width: 576px){
+                    top:20px;
+                    left:70px;
+                }
             }
             .text {
                 position: absolute;
                 top:58px;
                 left:94px;
                 font-size: 16px;
+                @media (max-width: 576px){
+                    top:40px;
+                    left:70px;
+                }
             }
         }
     }
 }
 
+.using-product-sect {
+    display: flex;
+    margin-top: 133px;
+    border-radius: 20px;
+    background-image: url("../img/bg.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    justify-content: flex-end;
+    @media (max-width: 576px){
+        margin-top: 100px;
+    }
+    .col {
+        max-width: 50%;
+        padding-top: 92px;
+        padding-bottom: 92px;
+        padding-left: 90px;
+        padding-right: 115px;
+        @media (max-width: 1200px){
+            padding-left: 78px;
+        }
+        @media (max-width: 992px){
+            padding-right: 5px;
+            padding-left: 50px;
+            padding-top: 50px;
+        }
+        @media (max-width: 768px){
+            padding-left: 15px;
+            padding-top: 15px;
+        }
+        @media (max-width: 576px){
+            max-width: 100%;
+            padding-top: 220px;
+            padding-bottom: 0;
+        } 
+        .heading {
+            font-size: 40px;
+            color: #FFFFFF;
+            @media (max-width: 768px){
+                font-size: 30px;
+            }
+            @media (max-width: 576px){
+                color: $darkgrey;
+            }
+        }
+        .text {
+            color: #FFFFFF;
+            margin-top: 15px;
+            @media (max-width: 576px){
+                color: $darkgrey;
+            }
+        }
+        .btn {
+            margin-top: 30px;
+            @media (max-width: 768px){
+                font-weight: 100;
+                padding: 18px 25px;
+            }
+            @media (max-width: 576px){
+                font-weight: 700;
+            }
+        }
+        .play {
+            margin-left: 20px;
+            background-color: #FFFFFF;
+            color: $darkgrey;
+            text-align: center;
+            padding: 18px 25px;
+            @media (max-width: 768px){
+                font-weight: 100;
+                margin-left: 5px;
+                padding: 18px 20px;
+            }
+            @media (max-width: 576px){
+                color: #FFFFFF;
+                background-color: $orange;
+                font-weight: 700;
+            }
+            img {
+                display: inline-block;
+                margin-right: 8px;
+                @media (max-width: 576px){
+                    display:none;
+                }
+            }
+        }
+    }
+}
 
+footer {
+    padding: 85px 0;
+    .footer-row {
+        display: flex;
 
+        @media (max-width: 992px){
+            flex-direction: column;
+        }
+
+        .col-1 {
+            flex-basis: 40%;
+            max-width: 40%;
+
+            &-inner {
+                max-width: 300px;
+            }
+        }
+
+        .col {
+            flex-basis: 20%;
+            max-width: 20%;
+        }
+
+        @media (max-width: 576px){
+            .col-1, .col {
+                flex-basis: 100%;
+                max-width: 100%;
+            }
+        }
+
+        .footer-heading {
+            font-size: 21px;
+            color: $darkgrey;
+            margin: 0 0 20px;
+
+            @media (max-width: 992px){
+                margin-top: 30px;
+            }
+        }
+
+        .footer-list {
+            &-item {
+                margin-bottom: 15px;
+
+                a {
+                    color: $darkgrey;
+                    text-decoration: none;
+                    font-size: 14px;
+                }
+            }
+        }
+    }
+    .social-links {
+        margin-top: 40px;
+        a {
+            margin-right: 25px;
+            font-size: 20px;
+
+            .fa-facebook-square {
+                color: #426782;
+            }
+            .fa-twitter {
+                color: #1DA1F2;
+            }
+            .fa-youtube-square {
+                color: #FF0000;
+            }
+            .fa-linkedin {
+                color: #006699;
+            }
+        }
+    }
+}
 
