--- a/css/style.css
+++ b/css/style.css
@@ -327,19 +327,48 @@ a {
     height: 110px;
   }
 }
+@media (max-width: 800px) {
+  .logo-sect-row .small-block {
+    left: 360px;
+    top: 355px;
+  }
+}
 @media (max-width: 768px) {
   .logo-sect-row .small-block {
-    left: 350px;
+    left: 250px;
     top: 355px;
-    height: 110px;
+  }
+}
+@media (min-width: 580px) and (max-width: 672px) {
+  .logo-sect-row .small-block {
+    left: 200px;
+    top: 355px;
   }
 }
 @media (max-width: 576px) {
   .logo-sect-row .small-block {
-    min-width: 292px;
     height: 90px;
-    left: 235px;
+    left: 150px;
     top: 257px;
+  }
+}
+@media (max-width: 525px) {
+  .logo-sect-row .small-block {
+    height: 90px;
+    left: 100px;
+    top: 257px;
+  }
+}
+@media (max-width: 483px) {
+  .logo-sect-row .small-block {
+    height: 90px;
+    left: 50px;
+    top: 180px;
+  }
+}
+@media (max-width: 430px) {
+  .logo-sect-row .small-block {
+    display: none;
   }
 }
 .logo-sect-row .small-block img {
@@ -380,7 +409,10 @@ a {
 }
 
 .using-product-sect {
+  position: relative;
+  z-index: 2;
   display: flex;
+  flex-wrap: wrap;
   margin-top: 133px;
   border-radius: 20px;
   background-image: url("../img/bg.jpg");
@@ -388,79 +420,63 @@ a {
   background-repeat: no-repeat;
   justify-content: flex-end;
 }
-@media (max-width: 576px) {
-  .using-product-sect {
-    margin-top: 100px;
-  }
-}
 .using-product-sect .col {
   max-width: 50%;
   padding-top: 92px;
   padding-bottom: 92px;
   padding-left: 90px;
-  padding-right: 115px;
+  padding-right: 30px;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1050px) {
   .using-product-sect .col {
-    padding-left: 78px;
+    padding-left: 60px;
+    padding-top: 70px;
   }
 }
 @media (max-width: 992px) {
   .using-product-sect .col {
-    padding-right: 5px;
-    padding-left: 50px;
-    padding-top: 50px;
+    padding-right: 30px;
+    padding-left: 30px;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 930px) {
   .using-product-sect .col {
-    padding-left: 15px;
-    padding-top: 15px;
+    padding-top: 40px;
+  }
+}
+@media (max-width: 903px) {
+  .using-product-sect .col {
+    min-width: 100%;
+    padding-top: 340px;
+    justify-content: flex-start;
   }
 }
 @media (max-width: 576px) {
   .using-product-sect .col {
-    max-width: 100%;
-    padding-top: 220px;
-    padding-bottom: 0;
+    padding-top: 200px;
   }
 }
 .using-product-sect .col .heading {
   font-size: 40px;
   color: #FFFFFF;
 }
-@media (max-width: 768px) {
-  .using-product-sect .col .heading {
-    font-size: 30px;
-  }
-}
-@media (max-width: 576px) {
+@media (max-width: 903px) {
   .using-product-sect .col .heading {
     color: #323232;
+    font-size: 30px;
   }
 }
 .using-product-sect .col .text {
   color: #FFFFFF;
   margin-top: 15px;
 }
-@media (max-width: 576px) {
+@media (max-width: 903px) {
   .using-product-sect .col .text {
     color: #323232;
   }
 }
 .using-product-sect .col .btn {
   margin-top: 30px;
-}
-@media (max-width: 768px) {
-  .using-product-sect .col .btn {
-    font-weight: 100;
-    padding: 18px 25px;
-  }
-}
-@media (max-width: 576px) {
-  .using-product-sect .col .btn {
-    font-weight: 700;
-  }
 }
 .using-product-sect .col .play {
   margin-left: 20px;
@@ -469,26 +485,266 @@ a {
   text-align: center;
   padding: 18px 25px;
 }
-@media (max-width: 768px) {
+@media (max-width: 451px) {
   .using-product-sect .col .play {
-    font-weight: 100;
     margin-left: 5px;
-    padding: 18px 20px;
-  }
-}
-@media (max-width: 576px) {
-  .using-product-sect .col .play {
-    color: #FFFFFF;
-    background-color: #F78434;
-    font-weight: 700;
   }
 }
 .using-product-sect .col .play img {
   display: inline-block;
   margin-right: 8px;
 }
+
+.service-sec {
+  position: relative;
+  z-index: 1;
+  margin-top: -230px;
+}
+.service-sec-textblock {
+  max-width: 1440px;
+  margin: 0 auto;
+  background-color: #F5F6FA;
+  min-height: 700px;
+  text-align: center;
+  padding-top: 370px;
+}
+.service-sec-textblock .text {
+  margin-top: 10px;
+}
+.service-sec .service-sec-flexbox {
+  margin-top: -170px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+@media (max-width: 786px) {
+  .service-sec .service-sec-flexbox {
+    gap: 15px;
+  }
+}
+.service-sec .service-sec-flexbox .col-1 {
+  background-image: url("../img/buyers.png");
+}
+.service-sec .service-sec-flexbox .col-2 {
+  background-image: url("../img/seller.png");
+}
+.service-sec .service-sec-flexbox .col-1, .service-sec .service-sec-flexbox .col-2 {
+  background-color: white;
+  background-repeat: no-repeat;
+  background-position: 50% 15%;
+  border-radius: 10px;
+  width: calc(50% - 30px);
+  text-align: center;
+  padding: 40px 88px;
+}
+@media (max-width: 902px) {
+  .service-sec .service-sec-flexbox .col-1, .service-sec .service-sec-flexbox .col-2 {
+    width: calc(50% - 15px);
+  }
+}
+@media (max-width: 786px) {
+  .service-sec .service-sec-flexbox .col-1, .service-sec .service-sec-flexbox .col-2 {
+    width: 100%;
+  }
+}
+.service-sec .service-sec-flexbox .col-1 .heading, .service-sec .service-sec-flexbox .col-2 .heading {
+  margin-top: 100px;
+  font-size: 42px;
+}
+.service-sec .service-sec-flexbox .col-1 .text, .service-sec .service-sec-flexbox .col-2 .text {
+  margin-bottom: 25px;
+}
+.service-sec .service-sec-flexbox .col-1 .btn, .service-sec .service-sec-flexbox .col-2 .btn {
+  background-color: white;
+  color: #F78434;
+}
+.service-sec .service-sec-flexbox .col-1:hover, .service-sec .service-sec-flexbox .col-2:hover {
+  background-color: #F78434;
+}
+.service-sec .service-sec-flexbox .col-1:hover {
+  background-image: url("../img/buyer_white.png");
+}
+.service-sec .service-sec-flexbox .col-2:hover {
+  background-image: url("../img/seller_white.png");
+}
+
+.qualities-sect {
+  text-align: center;
+  padding-top: 112px;
+  background-color: #FFFFFF;
+}
+.qualities-sect-flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  text-align: center;
+}
+.qualities-sect-flex-container .col-1 {
+  background-image: url("../img/performance-icon.svg");
+}
+.qualities-sect-flex-container .col-2 {
+  background-image: url("../img/entrepreneurship-icon-standart.svg");
+}
+.qualities-sect-flex-container .col-3 {
+  background-image: url("../img/authenticity-icon.svg");
+}
+.qualities-sect-flex-container .col-4 {
+  background-image: url("../img/kindness-icon.svg");
+}
+.qualities-sect-flex-container .col-1:hover {
+  background-image: url("../img/performance-icon-hover.svg");
+}
+.qualities-sect-flex-container .col-2:hover {
+  background-image: url("../img/entrepreneurship-icon.svg");
+}
+.qualities-sect-flex-container .col-3:hover {
+  background-image: url("../img/authenticity-icon-hover.svg");
+}
+.qualities-sect-flex-container .col-4:hover {
+  background-image: url("../img/kindness-icon-hover.svg");
+}
+.qualities-sect-flex-container .col-1, .qualities-sect-flex-container .col-2, .qualities-sect-flex-container .col-3, .qualities-sect-flex-container .col-4 {
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  flex: calc(25% - 34px);
+  margin-right: 17px;
+  margin-left: 17px;
+  margin-top: 58px;
+}
+@media (max-width: 992px) {
+  .qualities-sect-flex-container .col-1, .qualities-sect-flex-container .col-2, .qualities-sect-flex-container .col-3, .qualities-sect-flex-container .col-4 {
+    flex: calc(50% - 34px);
+  }
+}
 @media (max-width: 576px) {
-  .using-product-sect .col .play img {
+  .qualities-sect-flex-container .col-1, .qualities-sect-flex-container .col-2, .qualities-sect-flex-container .col-3, .qualities-sect-flex-container .col-4 {
+    flex: calc(100% - 34px);
+  }
+}
+.qualities-sect-flex-container .col-1 .heading, .qualities-sect-flex-container .col-2 .heading, .qualities-sect-flex-container .col-3 .heading, .qualities-sect-flex-container .col-4 .heading {
+  margin-top: 85px;
+  font-weight: bold;
+  margin-bottom: 2px;
+}
+.qualities-sect-flex-container .col-1 img, .qualities-sect-flex-container .col-2 img, .qualities-sect-flex-container .col-3 img, .qualities-sect-flex-container .col-4 img {
+  padding-left: calc(100%/2 - 35px);
+  margin-bottom: 15px;
+}
+
+/*tesimonials block*/
+.testimonials-sec .text-block {
+  margin-top: 112px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: baseline;
+}
+.testimonials-sec .text-block .heading {
+  font-size: 42px;
+  max-width: 40%;
+}
+.testimonials-sec .text-block .text {
+  max-width: 35%;
+}
+@media (max-width: 768px) {
+  .testimonials-sec .text-block .heading, .testimonials-sec .text-block .text {
+    max-width: 100%;
+  }
+  .testimonials-sec .text-block .heading {
+    font-size: 30px;
+  }
+  .testimonials-sec .text-block .text {
+    margin-top: 15px;
+  }
+}
+.testimonials-sec-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 58px;
+}
+.testimonials-sec-container .item {
+  position: relative;
+  flex: calc(100%/3 - 30px);
+  margin-right: 30px;
+  padding-bottom: 30px;
+}
+@media (max-width: 576px) {
+  .testimonials-sec-container .item {
+    flex: 100%;
+    text-align: center;
+    margin-top: 20px;
+  }
+  .testimonials-sec-container .item img {
+    margin: 0 auto;
+  }
+}
+.testimonials-sec-container .item .testimonials-text {
+  margin-top: 31px;
+  margin-left: 29px;
+}
+.testimonials-sec-container .item .author {
+  font-weight: bold;
+  margin-left: 29px;
+  margin-top: 23px;
+}
+.testimonials-sec-container .item .city {
+  color: #58BEBF;
+  margin-left: 29px;
+  margin-top: 1px;
+}
+.testimonials-sec-container .item:hover {
+  box-shadow: 0px 10px 52px rgba(0, 0, 0, 0.08);
+}
+.testimonials-sec-container .item:hover .city {
+  color: #F78434;
+}
+.testimonials-sec-container .item:hover .play-btn {
+  display: block;
+  position: absolute;
+  left: 82%;
+  top: 37%;
+}
+@media (max-width: 1200px) {
+  .testimonials-sec-container .item:hover .play-btn {
+    left: 75%;
+    top: 25%;
+  }
+}
+@media (max-width: 992px) {
+  .testimonials-sec-container .item:hover .play-btn {
+    left: 70%;
+    top: 20%;
+  }
+}
+@media (max-width: 768px) {
+  .testimonials-sec-container .item:hover .play-btn {
+    left: 65%;
+    top: 15%;
+  }
+}
+@media (max-width: 719px) {
+  .testimonials-sec-container .item:hover .play-btn {
+    left: 65%;
+    top: 10%;
+  }
+}
+@media (max-width: 576px) {
+  .testimonials-sec-container .item:hover .play-btn {
+    left: 70%;
+    top: 35%;
+  }
+}
+.testimonials-sec-container .item .play-btn {
+  display: none;
+}
+.testimonials-sec-container .item .cut-circle {
+  display: block;
+  position: absolute;
+  left: 87%;
+  top: -40px;
+}
+@media (max-width: 576px) {
+  .testimonials-sec-container .item .cut-circle {
     display: none;
   }
 }
