--- a/scss/style.scss
+++ b/scss/style.scss
@@ -112,16 +112,13 @@ a {
             border-radius: 29px;
             padding: 20px 30px 20px 65px;
             width: 100%;
-
             &::placeholder {
                 color: #BBBBBB;
             }
-
             @media (max-width: 480px){
                 padding-left: 30px;
             }
         }
-
         &:before {
             content: "";
             background-image: url(../img/email-icon.svg);
@@ -135,12 +132,10 @@ a {
             left: 28px;
             top:50%;
             transform: translateY(-50%);
-
             @media (max-width: 480px){
                 display: none;
             }
         }
-
         .btn {
             position: absolute;
             right: 0;
@@ -196,13 +191,11 @@ a {
                         transform: translateX(110px);
                     }
                 }
-            }
-            
+            }    
         }
         .col-2 {
             max-width: 50%;
             padding-left: 180px;
-
             &-text-block {
                 .heading {
                     margin-top: 68px;
@@ -257,16 +250,38 @@ a {
                 height: 110px;
             }
 
-            @media (max-width: 768px){
-                left: 350px;
+            @media (max-width: 800px){
+                left: 360px;
                 top: 355px;
-                height: 110px;
             }
+
+            @media (max-width: 768px){
+                left: 250px;
+                top: 355px;
+            }
+
+            @media (min-width: 580px) and (max-width: 672px){
+                left: 200px;
+                top: 355px;
+            }
+
             @media (max-width: 576px){
-                min-width: 292px;
                 height: 90px;
-                left: 235px;
+                left: 150px;
                 top: 257px;
+            }
+            @media (max-width: 525px){
+                height: 90px;
+                left: 100px;
+                top: 257px;
+            }
+            @media (max-width: 483px){
+                height: 90px;
+                left: 50px;
+                top: 180px;
+            }
+            @media (max-width: 430px){
+                display: none;
             }
 
             img {
@@ -305,65 +320,59 @@ a {
 }
 
 .using-product-sect {
+    position: relative;
+    z-index: 2;
     display: flex;
+    flex-wrap: wrap;
     margin-top: 133px;
     border-radius: 20px;
     background-image: url("../img/bg.jpg");
     background-size: contain;
     background-repeat: no-repeat;
     justify-content: flex-end;
-    @media (max-width: 576px){
-        margin-top: 100px;
-    }
+    
     .col {
         max-width: 50%;
         padding-top: 92px;
         padding-bottom: 92px;
         padding-left: 90px;
-        padding-right: 115px;
-        @media (max-width: 1200px){
-            padding-left: 78px;
+        padding-right: 30px;
+        @media (max-width: 1050px){
+            padding-left: 60px;
+            padding-top: 70px;
         }
         @media (max-width: 992px){
-            padding-right: 5px;
-            padding-left: 50px;
-            padding-top: 50px;
+            padding-right: 30px;
+            padding-left: 30px;
         }
-        @media (max-width: 768px){
-            padding-left: 15px;
-            padding-top: 15px;
+        @media (max-width: 930px){
+            padding-top: 40px;
+        }
+        @media (max-width: 903px){
+            min-width: 100%;
+            padding-top: 340px;
+            justify-content: flex-start;
         }
         @media (max-width: 576px){
-            max-width: 100%;
-            padding-top: 220px;
-            padding-bottom: 0;
-        } 
+            padding-top: 200px;
+        }
         .heading {
             font-size: 40px;
             color: #FFFFFF;
-            @media (max-width: 768px){
-                font-size: 30px;
-            }
-            @media (max-width: 576px){
+            @media (max-width: 903px){
                 color: $darkgrey;
+                font-size: 30px;
             }
         }
         .text {
             color: #FFFFFF;
             margin-top: 15px;
-            @media (max-width: 576px){
+            @media (max-width: 903px){
                 color: $darkgrey;
             }
         }
         .btn {
             margin-top: 30px;
-            @media (max-width: 768px){
-                font-weight: 100;
-                padding: 18px 25px;
-            }
-            @media (max-width: 576px){
-                font-weight: 700;
-            }
         }
         .play {
             margin-left: 20px;
@@ -371,24 +380,251 @@ a {
             color: $darkgrey;
             text-align: center;
             padding: 18px 25px;
-            @media (max-width: 768px){
-                font-weight: 100;
+            @media (max-width: 451px){
                 margin-left: 5px;
-                padding: 18px 20px;
-            }
-            @media (max-width: 576px){
-                color: #FFFFFF;
-                background-color: $orange;
-                font-weight: 700;
-            }
+                }    
             img {
                 display: inline-block;
                 margin-right: 8px;
-                @media (max-width: 576px){
-                    display:none;
-                }
             }
         }
+    }
+}
+
+.service-sec {
+    position: relative;
+    z-index: 1;
+    margin-top: -230px;
+    &-textblock {
+        max-width: 1440px;
+        margin: 0 auto;
+        background-color: #F5F6FA;
+        min-height: 700px;
+        text-align: center;
+        padding-top: 370px;
+        .text {
+            margin-top: 10px;
+        }
+    }
+    .service-sec-flexbox {
+        margin-top: -170px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        @media (max-width: 786px) {
+            gap: 15px;
+        }
+        .col-1 {
+            background-image: url("../img/buyers.png");
+        }
+        .col-2 {
+            background-image: url("../img/seller.png");
+        }
+        .col-1, .col-2 {
+            background-color: white;
+            background-repeat: no-repeat;
+            background-position: 50% 15%;
+            border-radius: 10px;
+            width: calc(50% - 30px);
+            text-align: center;
+            padding: 40px 88px;
+            @media (max-width: 902px) {
+                width: calc(50% - 15px);
+            }
+            @media (max-width: 786px) {
+                width: 100%;
+            }
+            .heading {
+                margin-top: 100px;
+                font-size: 42px;
+            }
+            .text {
+                margin-bottom: 25px;
+            }
+            .btn {
+                background-color: white;
+                color: $orange;
+            }
+        }
+        .col-1:hover, .col-2:hover {
+            background-color: $orange;
+        }
+        .col-1:hover {
+            background-image: url("../img/buyer_white.png");
+        }
+        .col-2:hover {
+            background-image: url("../img/seller_white.png");
+        }
+    }
+}
+
+.qualities-sect {
+    text-align: center;
+    padding-top: 112px;
+    background-color: #FFFFFF;
+    &-flex-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        text-align: center;
+        .col-1 {
+            background-image: url('../img/performance-icon.svg');
+        }
+        .col-2 {
+            background-image: url('../img/entrepreneurship-icon-standart.svg');
+        }
+        .col-3 {
+            background-image: url('../img/authenticity-icon.svg');
+        }
+        .col-4 {
+            background-image: url('../img/kindness-icon.svg');
+        }
+        .col-1:hover {
+            background-image: url('../img/performance-icon-hover.svg');
+        }
+        .col-2:hover {
+            background-image: url('../img/entrepreneurship-icon.svg');
+        }
+        .col-3:hover {
+            background-image: url('../img/authenticity-icon-hover.svg');
+        }
+        .col-4:hover {
+            background-image: url('../img/kindness-icon-hover.svg');
+        }
+        .col-1, .col-2, .col-3, .col-4 {
+            background-repeat: no-repeat;
+            background-position: 50% 0 ;
+            flex: calc(25% - 34px);
+            margin-right: 17px;
+            margin-left: 17px;
+            margin-top: 58px;
+            @media (max-width: 992px) {
+                flex: calc(50% - 34px);
+            }
+            @media (max-width: 576px) {
+                flex: calc(100% - 34px);
+            }
+            .heading {
+                // font-size: 28px;
+                margin-top: 85px;
+                font-weight: bold;
+                margin-bottom: 2px;
+            }
+            img {
+                padding-left: calc(100%/2 - 35px);
+                margin-bottom: 15px;
+            }
+        }
+    }
+}
+
+/*tesimonials block*/
+
+.testimonials-sec {
+    .text-block {
+        margin-top: 112px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: baseline;
+        .heading {
+            font-size: 42px;
+            max-width: 40%;
+        }
+        .text {
+            max-width: 35%;
+        }
+        @media (max-width: 768px) {
+            .heading, .text {
+                max-width: 100%;
+            }
+            .heading {
+                font-size: 30px;
+            }
+            .text {
+                margin-top: 15px;
+            }
+        }
+    }
+    &-container {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 58px;
+        .item {
+            position: relative;
+            flex: calc(100%/3 - 30px);
+            margin-right: 30px;
+            padding-bottom: 30px;
+            @media (max-width: 576px) {
+                flex: 100%;
+                text-align: center;
+                margin-top: 20px;
+                img {
+                    margin: 0 auto;
+                }
+            }
+            .testimonials-text {
+                margin-top: 31px;
+                margin-left: 29px;
+            }
+            .author {
+                font-weight: bold;
+                margin-left: 29px;
+                margin-top: 23px;
+            }
+            .city {
+                color: #58BEBF;
+                margin-left: 29px;
+                margin-top: 1px;
+            }
+            &:hover {
+                box-shadow: 0px 10px 52px rgba(0, 0, 0, 0.08);
+                .city {
+                    color: $orange;
+                }
+                .play-btn {
+                    display: block;
+                    position: absolute;
+                    left: 82%;
+                    top: 37%;
+                    @media (max-width: 1200px) {
+                        left: 75%;
+                        top: 25%;
+                    }
+                    @media (max-width: 992px) {
+                        left: 70%;
+                        top: 20%;
+                    }
+                    @media (max-width: 768px) {
+                        left: 65%;
+                        top: 15%;
+                    }
+                    @media (max-width: 719px) {
+                        left: 65%;
+                        top: 10%;
+                    }
+                    @media (max-width: 576px) {
+                        left: 70%;
+                        top: 35%;
+                    }
+                }   
+            }
+            .play-btn {
+                display: none;
+            }
+            
+            .cut-circle {
+                display: block;
+                position: absolute;
+                left: 87%;
+                top: -40px;
+                @media (max-width: 576px){
+                    display: none;
+                }
+            }
+
+        }
+        
     }
 }
 
